# Wildcard

./: Cargo.toml  README.md  meson.build
.github/workflows/: flatpak.yml
build-aux/: com.felipekinoshita.Wildcard.Devel.json  io.github.fkinoshita.Wildcard.Devel.json
data/: com.felipekinoshita.Wildcard.gschema.xml.in  com.felipekinoshita.Wildcard.metainfo.xml.in.in  io.github.fkinoshita.Wildcard.gschema.xml.in  io.github.fkinoshita.Wildcard.metainfo.xml.in.in
data/icons/: meson.build
data/resources/: examples.txt  meson.build  resources.gresource.xml  style.css
data/resources/ui/: flags_dialog.blp  info_dialog.blp  window.blp
po/: LINGUAS  POTFILES.in  ar.po  de.po  es.po  fi.po  fr.po  it.po  oc.po  pt_BR.po  ru.po  tr.po  wildcard.pot
src/: application.rs  flags_dialog.rs  main.rs  meson.build  regex_example.rs  window.rs
