[package]
name = "wildcard"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
once_cell = "1.12"
regex = "1.7"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
